Updated change log page and announcement. Fixed spacing issues with both.

--- a/public/assets/less/change.log.less
+++ b/public/assets/less/change.log.less
@@ -4,6 +4,9 @@
             h2 {
                 margin-top: 0;
             }
+            p {
+                margin-bottom: @margin-base;
+            }
         }
     }
 }
