--- a/public/assets/less/homepage.less
+++ b/public/assets/less/homepage.less
@@ -1,7 +1,7 @@
 @import 'variables';
 
-#announcement-more {
-    display: none;
+#announcement p {
+    margin-bottom: @margin-base;
 }
 
 #victory-card-container {
